cloudcommune initial commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ data_files =
 
 [entry_points]
 ceilometer.notification.pipeline =
-    meter = ceilometer.pipeline.sample:SamplePipelineManager
+    meter = ceilometer.pipeline.cloudcommune_sample:CloudCommuneSamplePipelineManager
     event = ceilometer.pipeline.event:EventPipelineManager
 
 ceilometer.sample.endpoint =
@@ -43,11 +43,13 @@ ceilometer.sample.endpoint =
     hardware.ipmi.voltage = ceilometer.ipmi.notifications.ironic:VoltageSensorNotification
     hardware.ipmi.current = ceilometer.ipmi.notifications.ironic:CurrentSensorNotification
     hardware.ipmi.fan = ceilometer.ipmi.notifications.ironic:FanSensorNotification
-    _sample = ceilometer.telemetry.notifications:TelemetryIpc
+    _sample = ceilometer.telemetry.cloudcommune_notifications:CloudCommuneTelemetryIpc
     meter = ceilometer.meter.notifications:ProcessMeterNotifications
 
 ceilometer.discover.compute =
     local_instances = ceilometer.compute.discovery:InstanceDiscovery
+    server_discovery = ceilometer.compute.server_pollsters.discovery:InstanceDiscovery
+    host_discovery = ceilometer.host.discovery:HostDiscovery
 
 ceilometer.discover.central =
     endpoint = ceilometer.polling.discovery.endpoint:EndpointDiscovery
@@ -77,6 +79,7 @@ ceilometer.poll.compute =
     disk.device.write.requests = ceilometer.compute.pollsters.disk:PerDeviceWriteRequestsPollster
     disk.device.read.bytes = ceilometer.compute.pollsters.disk:PerDeviceReadBytesPollster
     disk.device.write.bytes = ceilometer.compute.pollsters.disk:PerDeviceWriteBytesPollster
+    disk.device.vmused = ceilometer.compute.pollsters.disk:PerDeviceVMusedPollster
     disk.device.read.latency = ceilometer.compute.pollsters.disk:PerDeviceDiskReadLatencyPollster
     disk.device.write.latency = ceilometer.compute.pollsters.disk:PerDeviceDiskWriteLatencyPollster
     disk.device.latency = ceilometer.compute.pollsters.disk:PerDeviceDiskLatencyPollster
@@ -107,6 +110,32 @@ ceilometer.poll.compute =
     perf.instructions = ceilometer.compute.pollsters.instance_stats:PerfInstructionsPollster
     perf.cache.references = ceilometer.compute.pollsters.instance_stats:PerfCacheReferencesPollster
     perf.cache.misses = ceilometer.compute.pollsters.instance_stats:PerfCacheMissesPollster
+    gpu.memory.used = ceilometer.compute.pollsters.gpu:GPUMemUsedPollster
+    gpu.memory.total = ceilometer.compute.pollsters.gpu:GPUMemTotalPollster
+    gpu.temperature = ceilometer.compute.pollsters.gpu:GPUTempPollster
+    gpu.utilization = ceilometer.compute.pollsters.gpu:GPUUtilPollster
+    trove.redis.cmdstat.set.calls = ceilometer.compute.server_pollsters.redis_db:CmdStatSetCallsPollster
+    trove.redis.cmdstat.get.avg = ceilometer.compute.server_pollsters.redis_db:CmdStatGetAvgPollster
+    trove.redis.cmdstat.get.calls = ceilometer.compute.server_pollsters.redis_db:CmdStatGetCallsPollster
+    trove.redis.cmdstat.set.avg = ceilometer.compute.server_pollsters.redis_db:CmdStatSetAvgPollster
+    trove.redis.instantaneous.output = ceilometer.compute.server_pollsters.redis_db:StatsInstantaneousOutputPollster
+    trove.redis.instantaneous.input = ceilometer.compute.server_pollsters.redis_db:StatsInstantaneousInputPollster
+    trove.redis.instantaneous.ops = ceilometer.compute.server_pollsters.redis_db:StatsInstantaneousOpsPollster
+    trove.redis.key.expired = ceilometer.compute.server_pollsters.redis_db:KeyExpiredPollster
+    trove.redis.keyspace.misses = ceilometer.compute.server_pollsters.redis_db:KeyspaceMissesPollster
+    trove.redis.key.error = ceilometer.compute.server_pollsters.redis_db:KeyErrorRepliesPollster
+    trove.redis.key.total = ceilometer.compute.server_pollsters.redis_db:KeyTotalPollster
+    trove.redis.key.evicted = ceilometer.compute.server_pollsters.redis_db:KeyEvictedPollster
+    trove.redis.keyspace.usage.hit = ceilometer.compute.server_pollsters.redis_db:KeyspaceUsageHitPollster
+    trove.redis.keyspace.hits = ceilometer.compute.server_pollsters.redis_db:KeyspaceHitsPollster
+    trove.redis.keyspace.expires = ceilometer.compute.server_pollsters.redis_db:KeyspaceExpiresPollster
+    trove.redis.client.connected = ceilometer.compute.server_pollsters.redis_db:ClientConnectedPollster
+    trove.redis.client.connected.usage = ceilometer.compute.server_pollsters.redis_db:ClientConnectedUsagePollster
+    trove.redis.slow.num = ceilometer.compute.server_pollsters.redis_db:SlowNumPollster
+    host.load.1m = ceilometer.host.cpu:Load1m
+    host.load.5m = ceilometer.host.cpu:Load5m
+    host.load.15m = ceilometer.host.cpu:Load15m
+
 
 ceilometer.poll.ipmi =
     hardware.ipmi.node.power = ceilometer.ipmi.pollsters.node:PowerPollster
@@ -124,6 +153,14 @@ ceilometer.poll.ipmi =
 
 ceilometer.poll.central =
     ip.floating = ceilometer.network.floatingip:FloatingIPPollster
+    ip.floating.incoming.bytes = ceilometer.network.statistics.fip:FIPReceiveBytesPollster
+    ip.floating.outgoing.bytes = ceilometer.network.statistics.fip:FIPTransmitBytesPollster
+    ip.floating.incoming.packets = ceilometer.network.statistics.fip:FIPReceivePacketsPollster
+    ip.floating.outgoing.packets = ceilometer.network.statistics.fip:FIPTransmitPacketsPollster
+    ip6.incoming.bytes = ceilometer.network.statistics.fip:IP6ReceiveBytesPollster
+    ip6.outgoing.bytes = ceilometer.network.statistics.fip:IP6TransmitBytesPollster
+    ip6.incoming.packets = ceilometer.network.statistics.fip:IP6ReceivePacketsPollster
+    ip6.outgoing.packets = ceilometer.network.statistics.fip:IP6TransmitPacketsPollster
     image.size = ceilometer.image.glance:ImageSizePollster
     port = ceilometer.network.statistics.port_v2:PortPollster
     port.uptime = ceilometer.network.statistics.port_v2:PortPollsterUptime
@@ -186,6 +223,8 @@ ceilometer.poll.central =
     volume.size = ceilometer.volume.cinder:VolumeSizePollster
     volume.snapshot.size = ceilometer.volume.cinder:VolumeSnapshotSize
     volume.backup.size = ceilometer.volume.cinder:VolumeBackupSize
+    bucket.standard.storage.size2 = ceilometer.objectstore.oss:OSSReceiveSizesPollster
+    bucket.fee.standard.storage.size2 = ceilometer.objectstore.oss:OSSFeeSizesPollster
 
 ceilometer.builder.poll.central =
     hardware.snmp = ceilometer.hardware.pollsters.generic:GenericHardwareDeclarativePollster
@@ -195,11 +234,21 @@ ceilometer.compute.virt =
     hyperv = ceilometer.compute.virt.hyperv.inspector:HyperVInspector
     vsphere = ceilometer.compute.virt.vmware.inspector:VsphereInspector
     xenapi = ceilometer.compute.virt.xenapi.inspector:XenapiInspector
+    none = ceilometer.compute.virt.none.inspector:NoneInspector
 
 ceilometer.hardware.inspectors =
     snmp = ceilometer.hardware.inspector.snmp:SNMPInspector
 
+ceilometer.transformer =
+    accumulator = ceilometer.transformer.accumulator:TransformerAccumulator
+    delta = ceilometer.transformer.conversions:DeltaTransformer
+    unit_conversion = ceilometer.transformer.conversions:ScalingTransformer
+    rate_of_change = ceilometer.transformer.conversions:RateOfChangeTransformer
+    aggregator = ceilometer.transformer.conversions:AggregatorTransformer
+    arithmetic = ceilometer.transformer.arithmetic:ArithmeticTransformer
+
 ceilometer.sample.publisher =
+    monasca = ceilometer.publisher.monasca:MonascaPublisher
     test = ceilometer.publisher.test:TestPublisher
     notifier = ceilometer.publisher.messaging:SampleNotifierPublisher
     udp = ceilometer.publisher.udp:UDPPublisher
@@ -234,6 +283,10 @@ console_scripts =
 network.statistics.drivers =
     opendaylight = ceilometer.network.statistics.opendaylight.driver:OpenDayLightDriver
     opencontrail = ceilometer.network.statistics.opencontrail.driver:OpencontrailDriver
+    cloudcommunesdn    = ceilometer.network.statistics.cloudcommunesdn.driver:CloudCommuneSDNDriver
+
+objectstore.drivers =
+    cloudcommuneoss = ceilometer.objectstore.driver:CloudCommuneOSSDriver
 
 oslo.config.opts =
     ceilometer = ceilometer.opts:list_opts
