--- a/ceilometer/publisher/data/gnocchi_resources.yaml
+++ b/ceilometer/publisher/data/gnocchi_resources.yaml
@@ -238,22 +238,16 @@ resources:
       volume.snapshot.size:
       volume.backup.size:
       backup.size:
-      volume.manage_existing.start:
-      volume.manage_existing.end:
-      volume.manage_existing_snapshot.start:
-      volume.manage_existing_snapshot.end:
     attributes:
       display_name: resource_metadata.(display_name|name)
       volume_type: resource_metadata.volume_type
       image_id: resource_metadata.image_id
       instance_id: resource_metadata.instance_id
     event_delete:
-      - volume.delete.end
-      - snapshot.delete.end
-    event_update: volume.transfer.accept.end
+      - volume.delete.start
+      - snapshot.delete.start
     event_attributes:
       id: resource_id
-      project_id: project_id
 
   - resource_type: volume_provider
     metrics:
@@ -413,4 +407,3 @@ resources:
       network.services.lb.loadbalancer:
       network.services.lb.total.connections:
       network.services.lb.active.connections:
-
